<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginInstagram">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="399dp"
        android:layout_height="94dp"
        android:layout_marginBottom="500dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        app:srcCompat="@drawable/instagram_logo" />

    <EditText
        android:id="@+id/editTextInstagramLogin"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="496dp"
        android:background="@drawable/corner"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeHolderEmail"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/placeHolderEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextInstagramPass"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginBottom="490dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/placeHolderPassword"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/placeHolderPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstagramLogin"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/button2"
        android:layout_width="283dp"
        android:layout_height="54dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/corner"
        android:contentDescription="@string/app_name_instagram"
        android:text="@string/loginButton"
        app:backgroundTint="#1C91ED"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstagramPass" />

    <Button
        android:id="@+id/button3"
        android:layout_width="267dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/corner"
        android:contentDescription="@string/app_name_instagram"
        android:text="@string/loginButtonWith"
        app:backgroundTint="#1C91ED"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/app_name_instagram"
        android:text="@string/forgot_login_details"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:layout_marginBottom="193dp"
        android:contentDescription="@string/app_name_instagram"
        android:text="@string/footer_instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="27dp"
        android:text="@string/forgot_login_details_help"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>