<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="235dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/facebook_logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="371dp"
        android:autofillHints=""
        android:background="@drawable/corner"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/placeHolderEmail"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="#1C91ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="371dp"
        android:autofillHints=""
        android:background="@drawable/corner"
        android:ems="10"
        android:hint="@string/placeHolderPassword"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/black"
        android:textColorHint="#1C91ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        android:layout_marginBottom="221dp"
        android:background="@drawable/corner"
        android:text="@string/loginButton"
        android:textColor="@color/facebookLogin"
        android:textColorHighlight="@color/facebookLogin"
        android:textColorHint="@color/facebookLogin"
        android:textColorLink="@color/facebookLogin"
        app:backgroundTint="#1C91ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="72dp"
        android:text="@string/forgotPassword"
        android:textColor="#1C91ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.837" />
</androidx.constraintlayout.widget.ConstraintLayout>